--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: ttdo
 Title: Extend 'tinytest' with 'diffobj'
-Version: 0.0.2
-Date: 2019-08-31
+Version: 0.0.3
+Date: 2019-09-08
 Author: Dirk Eddelbuettel
 Maintainer: Dirk Eddelbuettel <edd@debian.org>
-Description: The 'tinytest' package offers a leight-weight zero-dependency unit-testing
+Description: The 'tinytest' package offers a light-weight zero-dependency unit-testing
  framework to which this package adds support of the 'diffobj' package for 'diff'-style
  comparison of R objects.
 License: GPL (>= 2)
