--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,3 +2,4 @@ import(tinytest)
 importFrom(diffobj, diffPrint)
 
 export(expect_equal_with_diff, expect_equivalent_with_diff)
+export(makeDataFrame)
