--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,3 +3,4 @@ importFrom(diffobj, diffPrint)
 
 export(expect_equal_with_diff, expect_equivalent_with_diff)
 export(makeDataFrame)
+export(expect_equal_xl, expect_equivalent_xl, expect_identical_xl)
