add GitHub Action CI runner using run.sh from r-ci

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,6 +1,6 @@
 ^.*\.Rproj$
 ^\.Rproj\.user$
-^\.travis.yml$
+^\.travis\.yml$
 ^local
 ^\.codecov\.yml$
 ^.editorconfig$
@@ -9,3 +9,4 @@
 ^GRTAGS
 ^GTAGS
 ^docs
+^\.github
