--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: ttdo
 Title: Extend 'tinytest' with 'diffobj'
-Version: 0.0.6.2
-Date: 2020-07-27
+Version: 0.0.7
+Date: 2021-07-06
 Author: Dirk Eddelbuettel and Alton Barbehenn
 Maintainer: Dirk Eddelbuettel <edd@debian.org>
 Description: The 'tinytest' package offers a light-weight zero-dependency unit-testing
@@ -12,6 +12,5 @@ URL: https://github.com/eddelbuettel/ttdo/, https://dirk.eddelbuettel.com/code/t
 BugReports: https://github.com/eddelbuettel/ttdo/issues
 NeedsCompilation: no
 Encoding: UTF-8
-LazyData: true
-Imports: tinytest, diffobj
+Imports: tinytest (>= 1.3.1), diffobj
 RoxygenNote: 7.1.0
