--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: ttdo
 Title: Extend 'tinytest' with 'diffobj'
-Version: 0.0.9
-Date: 2023-02-21
+Version: 0.0.9.2
+Date: 2025-01-18
 Authors@R: c(person("Dirk", "Eddelbuettel", role = c("aut", "cre"), email = "edd@debian.org",
                     comment = c(ORCID = "0000-0001-6419-907X")),
              person("Alton", "Barbehenn", role = "aut",
@@ -14,5 +14,9 @@ URL: https://github.com/eddelbuettel/ttdo/, https://dirk.eddelbuettel.com/code/t
 BugReports: https://github.com/eddelbuettel/ttdo/issues
 NeedsCompilation: no
 Encoding: UTF-8
-Imports: tinytest (>= 1.4.1), diffobj
-RoxygenNote: 7.1.0
+Imports: tinytest (>= 1.4.1), diffobj, tinysnapshot, base64enc
+RoxygenNote: 7.3.2
+Packaged: 2025-01-16 01:08:36 UTC; edd
+Author: Dirk Eddelbuettel [aut, cre] (<https://orcid.org/0000-0001-6419-907X>),
+  Alton Barbehenn [aut] (<https://orcid.org/0009-0000-3364-7204>)
+Maintainer: Dirk Eddelbuettel <edd@debian.org>
