--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,18 +1,19 @@
 Package: ttdo
-Title: Extend 'tinytest' with 'diffobj'
-Version: 0.0.9.3
-Date: 2025-01-20
+Title: Extend 'tinytest' with 'diffobj' and 'tinysnapshot'
+Version: 0.0.10
+Date: 2025-01-21
 Authors@R: c(person("Dirk", "Eddelbuettel", role = c("aut", "cre"), email = "edd@debian.org",
                     comment = c(ORCID = "0000-0001-6419-907X")),
              person("Alton", "Barbehenn", role = "aut",
                     comment = c(ORCID = "0009-0000-3364-7204")))
 Description: The 'tinytest' package offers a light-weight zero-dependency unit-testing
- framework to which this package adds support of the 'diffobj' package for 'diff'-style
- comparison of R objects.
+ framework to which this package adds support via the 'diffobj' package for 'diff'-style
+ textual comparison of R objects, as well as via 'tinysnapshot' package for visual
+ differences in plots.
 License: GPL (>= 2)
 URL: https://github.com/eddelbuettel/ttdo/, https://dirk.eddelbuettel.com/code/ttdo.html
 BugReports: https://github.com/eddelbuettel/ttdo/issues
 NeedsCompilation: no
 Encoding: UTF-8
-Imports: tinytest (>= 1.4.1), diffobj, tinysnapshot, base64enc
+Imports: tinytest (>= 1.4.1), diffobj, tinysnapshot (>= 0.0.8), base64enc
 RoxygenNote: 7.3.2
